# opencode-plusplus

./: .gitignore  ARCHITECTURE.md  README.md  ROADMAP.md  pyproject.toml
agents/: __init__.py  base.py  coder.py  executor.py  llm_coder.py  llm_researcher.py  llm_reviewer.py  llm_tester.py  planner.py  reflector.py  researcher.py  reviewer.py  tester.py
applications/: __init__.py  cli.py  container.py  main.py  orchestrator.py  services.py
architecture/: layers.yaml
benchmarks/: __init__.py  benchmark_runner.py  definitions.py  metrics.py  suite.py
configs/: __init__.py  application.py  benchmark.py  git.py  llm.py  memory.py  workspace.py
core/: container.py  exceptions.py  ids.py  null_objects.py  stub_llm.py
docs/: architecture.md  model_intelligence.md  roadmap.md  runtime.md  skill-levels.md
evaluation/: __init__.py  benchmark_runner.py  evaluator.py
evolution/: __init__.py  engine.py  loop.py  prompt_evolver.py  skill_evolver.py  skill_extractor.py
memory/: __init__.py  asset_repository.py  experience_store.py  file_experience_store.py  file_reflection_repository.py  file_skill_repository.py  reflection_repository.py  skill_repository.py
prompts/: architect.md  code_reviewer.md  domain_model_generator.md  interface_generator.md  python_style.md  refactoring.md
runtime/: __init__.py  event_bus.py  execution_engine.py  git_manager.py  orchestrator.py  services.py  workflow_runner.py  workspace_manager.py
skills/: __init__.py  extractor.py  registry.py
tests/: architecture_layers.py  test_architecture.py  test_opencode_adapter.py
(+290 files in other folders)
