[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencode-plusplus"
version = "0.1.0"
description = "An AI system built in Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "dependency-injector>=4.41",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
